Fixed some Extra padding on the NavBar
Need to tackle the extra width later

--- a/css/custom.css
+++ b/css/custom.css
@@ -100,6 +100,3 @@ h2 {
     background-color: #7c2a17;
 }
 
-ul li a{
-    height:52px;
-}
